Add guide image showing ESP32 locations

--- a/index.html
+++ b/index.html
@@ -266,6 +266,8 @@
             <div class="guide-section">
                 <h2>Update Guide</h2>
 
+                <img src="guide.jpg" alt="Ballgun ESP32 locations" class="guide-image">
+
                 <div class="step">
                     <div class="step-number">1</div>
                     <div class="step-content">
